...
    if (cleanPhone.length > 11 &&
        !cleanPhone.startsWith('+20') &&
        !cleanPhone.startsWith('0020')) {
      return 'رقم الهاتف طويل جداً';
    }

    if (!cleanPhone.startsWith('01') &&
        !cleanPhone.startsWith('+2001') &&
        !cleanPhone.startsWith('002001')) {
      return 'رقم الهاتف يجب أن يبدأ بـ 01';
    }

    final secondDigit =
...
