...
                  color: accent,
                  onPressed: () => _viewUploadedDocument(uploadData),
                ),
                Container(width: 1, height: 30, color: Colors.grey[200]),
                _buildDocumentActionButton(
                  icon: Icons.edit,
                  label: 'تعديل',
                  color: primaryDark,
                  onPressed:
                      () => _editUploadedDocument(
                        uploadData,
                        doc['title'],
                        documentId: doc['_id']?.toString(),
...
